--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 group = 'uk.gov'
 version = '0.1-SNAPSHOT'
@@ -7,5 +8,18 @@ version = '0.1-SNAPSHOT'
 repositories.mavenCentral()
 dependencies {
 	compile gradleApi()
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+		}
+	}
+	repositories {
+		maven {
+			url '/srv/maven'
+		}
+	}
 }
 
