[ POST-RELEASE 0.2 -> 0.3-SNAPSHOT ]
Updates version to new snapshot after 0.2 release.

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'uk.gov'
-version = '0.2'
+version = '0.3-SNAPSHOT'
 
 repositories.mavenCentral()
 dependencies {
