[ POST-RELEASE 0.4 -> 0.5-SNAPSHOT ]

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'uk.gov'
-version = '0.4'
+version = '0.5-SNAPSHOT'
 
 repositories.mavenCentral()
 dependencies {
