--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'uk.gov'
-version = '1.0'
+version = '1.1-SNAPSHOT'
 
 repositories.mavenCentral()
 dependencies {
