--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'uk.gov'
-version = '1.1-SNAPSHOT'
+version = '1.2'
 
 repositories.mavenCentral()
 dependencies {
@@ -24,4 +24,3 @@ publishing {
 }
 
 defaultTasks 'clean', 'publishToMavenLocal'
-
