--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id "com.bmuschko.nexus" version "2.3.1"
 }
 group = 'com.github.cmhdave'
-version = '1.3-SNAPSHOT'
+version = '1.3'
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
 repositories.mavenCentral()
 dependencies {
@@ -57,5 +58,34 @@ publishing {
     }
 }
 
-defaultTasks 'clean', 'publishToMavenLocal'
+ modifyPom {
+     project {
+        name = "Gradle Gatling Plugin"
+        description = "Run gatling load test scenarios from a gradle build"
+        url = "https://github.com/cmhdave/gradle-gatling-plugin"
+        inceptionYear = '2018'
+        licenses {
+            license {
+                name = "The MIT License (MIT)"
+                url = "https://github.com/cmhdave/gradle-gatling-plugin/blob/master/LICENSE.txt"
+            }
+        }
+        developers {
+            developer {
+                id = "cmhdave"
+                name = "Dave Collins"
+                email = "collins.180@osu.edu"
+            }
+        }
+        scm {
+            connection = "scm:git:git://github.com/cmhdave/gradle-gatling-plugin.git"
+            developerConnection = "scm:git:ssh://github.com:cmhdave/gradle-gatling-plugin.git"
+            url = "https://github.com/cmhdave/gradle-gatling-plugin"
+        }
+     }
+ }
+nexusStaging {
+    stagingProfileId = '4dc667c37cc874'
+}
 
+defaultTasks 'clean', 'publishToMavenLocal'
