AUT-426: Upgrade gradle to v6.1.1
This change upgrades Gradle from v1.12 to v6.1.1 to stop Integrated Development Environment application from showing the following error message.

`Support for builds using Gradle versions older than 2.6 was removed in tooling API version 5.0. You are currently using Gradle version 1.12. You should upgrade your Gradle build to use Gradle 2.6 or later.`

It also updates Gradle to publish plugin to a remote artifactory instead of the local artifactory because it will run on Concourse which does not have access to the local artifactory.

Author: @adityapahuja

--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,21 @@ dependencies {
 }
 
 publishing {
+	repositories {
+		maven {
+			credentials {
+				username "${System.env.ARTIUSER}"
+				password "${System.env.ARTIPASSWORD}"
+			}
+			url "https://artifactory.ida.digital.cabinet-office.gov.uk/artifactory/plugins-release-local"
+		}
+	}
+
 	publications {
 		mavenJava(MavenPublication) {
 			from components.java
 		}
 	}
-	repositories {
-		maven {
-			url '/srv/maven'
-		}
-	}
 }
 
 defaultTasks 'clean', 'publishToMavenLocal'
-
