AUT-426: Update to use dynamic version instead of hardcoded value
This change updates Gradle to use BUILD_NUMBER as an environment variable instead of the hardcoded value "SNAPSHOT". Whenever there is a new commit added to the master branch, the build number increments by 1 provided that the build is successful.

The version will start from v1.3.1 instead of v1.2-SNAPSHOT.

Author: @adityapahuja

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'uk.gov'
-version = '1.2-SNAPSHOT'
+version = "1.3-${System.env.BUILD_NUMBER ?: 'SNAPSHOT'}"
 
 repositories.mavenCentral()
 dependencies {
